--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Title of Kara's web site
+description: This is where Kara would put the description of the web site.
